# WaveSolver

./: .gitignore  CMakeLists.txt  README.md  README.txt~  main.cpp  plot.sh  plot.sh~
Guitar/: Guitar.cpp  Guitar.h
Impulse/: Impulse.cpp  Impulse.h
Test/: Test.cpp  Test.h
TestConstant/: TestConstant.cpp  TestConstant.h
TestQuadratic/: TestQuadratic.cpp  TestQuadratic.h
Wave1DSolver/: Wave1DSolver.cpp  Wave1DSolver.h
